Added update global weather
